# hyprsome

./: .gitignore  Cargo.toml  flake.nix
src/: config.rs  main.rs
src/hyprland_ipc/: workspace.rs
