[package]
name = "hyprsome"
description = "A small CLI apps that allows to make Hyprland's workspaces work like Awesome in multi-monitor setup"
license = "GPL-3.0"
version = "0.1.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
serde = "1.0.145"
serde_json = "1.0.86"
hyprland = "0.4.0-alpha.2"
once_cell = "1.19"
toml = "0.8"
anyhow = "1.0"
xdg = "2.5"
